--- a/src/app/component/formulario-producto/formulario-producto.component.html
+++ b/src/app/component/formulario-producto/formulario-producto.component.html
@@ -1,6 +1,6 @@
 <div class="caja">
     <div class="row">
-        <form class="col s12" #form="ngForm" (ngSubmit)="accion(form)">
+        <form class="col s12" #form="ngForm" (ngSubmit)="accion(form);valorEmitido()">
             <div class="row">
                 <div class="input-field col s6">
                     <input name="descripcion" id="descripcion" type="text" class="validate" ngModel>
@@ -12,7 +12,7 @@
                 </div>
             </div>
             <div class="input-field col s12 right-align">
-                <button (click)="formulario" class="btn waves-effect waves-light" type="submit" name="action">Agregar
+                <button class="btn waves-effect waves-light" type="submit" name="action">Agregar
             <i class="material-icons right">check</i>
              </button>
             </div>
