--- a/src/app/component/tabla-producto/tabla-producto.component.html
+++ b/src/app/component/tabla-producto/tabla-producto.component.html
@@ -1,4 +1,4 @@
-<table class="centered" *ngIf="producs.length!=0">
+<table class="" *ngIf="producs.length!=0">
     <thead>
         <tr>
             <th>Descripcion</th>
@@ -12,7 +12,7 @@
         <tr *ngFor="let producto of producs; let i = index">
             <td>{{producto.descripcion}}</td>
             <td>{{producto.pu}}</td>
-            <td><a (click)="tabla()" class="btn-floating btn-small waves-effect waves-light    green lighten-3"><i class="material-icons">edit</i></a>
+            <td><a (click)="editar(i)" class="btn-floating btn-small waves-effect waves-light    green lighten-3"><i class="material-icons">edit</i></a>
                 <a (click)="delete(i)" class=" btn-floating btn-small waves-effect waves-light  red lighten-3"><i class="material-icons ">delete</i></a></td>
         </tr>
     </tbody>
